<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_ic_favorite"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_compare"
            android:icon="@drawable/ic_ic_compare"
            android:title="@string/menu_compare" />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/ic_ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_ic_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
