<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.androidproject.PhoneGarage.Fragments.DevelopersFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/developer_img"
                android:layout_width="match_parent"
                android:layout_height="351dp"
                android:src="@drawable/ic_ic_about" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/developers_contact"
                android:textColor="@color/text_color"
                android:textSize="@dimen/header" />

            <Button
                android:id="@+id/webButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_website"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/emailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_email"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/facButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_facebook"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/callButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_call"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/textButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_text"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/addToContactButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_add_contact"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

            <Button
                android:id="@+id/locaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/developers_location"
                android:textAllCaps="false"
                android:textColor="@color/button_color" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
