<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.androidproject.PhoneGarage.Fragments.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/header_backgrond" />

            <TextView
                android:id="@+id/devTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/about_developers"
                android:textColor="@color/text_color"
                android:textSize="@dimen/header"
                android:textStyle="italic" />

            <Button
                android:id="@+id/ghaithButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/about_ghaith"
                android:textAllCaps="false"
                android:textColor="@color/button_color"
                android:textSize="@dimen/details_list_textsize" />

            <Button
                android:id="@+id/aliButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/about_ali"
                android:textAllCaps="false"
                android:textColor="@color/button_color"
                android:textSize="@dimen/details_list_textsize" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/about_resources"
                android:textColor="@color/text_color"
                android:textSize="@dimen/header"
                android:textStyle="italic"
                tools:text="@string/about_resources" />

            <Button
                android:id="@+id/resButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custome_button"
                android:padding="10dp"
                android:text="@string/about_resources"
                android:textAllCaps="false"
                android:textColor="@color/button_color"
                android:textSize="@dimen/details_list_textsize" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>